# 3fasts

./: .gitignore  3fasts.py  LICENSE  pyproject.toml
fasts/: utils.py
fasts/cli/: commands.py  utils.py
fasts/core/: fastcss.py  renderer.py  server.py  settings.py
fasts/core/controllers/: base.py
fasts/core/fastcss/: __init__.py  css.py
fasts/core/models/: base.py
fasts/core/security/: auth.py  middleware.py  permissions.py
fasts/scaffold/project/: main.py  pyproject.toml
fasts/scaffold/project/apps/: about.py
fasts/scaffold/project/configs/: caller.py  envs.py
