[tool.poetry]
name = "fasts"
version = "0.1.0"
description = ""
authors = ["Genese Lessa <genese.lessa@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "3.12.*"
typer = "^0.15.2"
fastapi = "^0.115.12"
python-fasthtml = "^0.12.12"
tortoise = "^0.1.1"
tortoise-orm = "^0.24.2"
taskipy = "^1.14.1"

[tool.poetry.scripts]
3fast = "fasts.cli.commands:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
